test-fixtures/machine-dsl-tests/tests/compile_fail/canonical_transition_signal_rejects_string_identity.stderr
error[E0432]: unresolved import `meerkat_machine_kernels::legacy`
 --> tests/compile_fail/canonical_transition_signal_rejects_string_identity.rs:3:30
  |
3 | use meerkat_machine_kernels::legacy::KernelSignal;
  |                              ^^^^^^ could not find `legacy` in `meerkat_machine_kernels`

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> tests/compile_fail/canonical_transition_signal_rejects_string_identity.rs:11:13
   |
11 |     let _ = meerkat_machine_kernels::generated::meerkat::transition_signal(&state, &signal);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----------------- argument #3 of type `&_` is missing
   |
note: function defined here
  --> $WORKSPACE/meerkat-machine-kernels/src/generated/meerkat.rs
   |
   | pub fn transition_signal(
   |        ^^^^^^^^^^^^^^^^^
help: provide the argument
   |
11 |     let _ = meerkat_machine_kernels::generated::meerkat::transition_signal(&state, &signal, /* _context */);
   |                                                                                           ++++++++++++++++
